Fixed height on mobile

--- a/src/app/components/password-view/password-view.component.scss
+++ b/src/app/components/password-view/password-view.component.scss
@@ -1,5 +1,5 @@
 :host {
-
+margin-bottom: 1rem;
 }
 
 h2 {
