--- a/src/app/components/passwords-manager/passwords-manager.component.scss
+++ b/src/app/components/passwords-manager/passwords-manager.component.scss
@@ -11,7 +11,6 @@
   flex: 1 1 auto;
   box-sizing: border-box;
   overflow: auto;
-  margin-top: 1rem;
 
   mat-list {
     flex: 1 1 auto;
